fix jumping input box

--- a/src/style.css
+++ b/src/style.css
@@ -354,6 +354,10 @@ h2 {
 }
 
 .hide-furigana rt,
+.transparent {
+	opacity: 0;
+}
+
 .display-none,
 .hide-emojis .inquery-emoji {
 	display: none;
